--- a/css/base.css
+++ b/css/base.css
@@ -246,7 +246,7 @@ a, i, .btn, button, img, span, ul, li, a:before, .dropdown-menu, .feature-icon, 
     Page Title
 ------------------------*/
 .page-title { display: block; position: relative; padding: 100px 0; background: var(--theme-bg-dark2-color); z-index: 9; background-attachment: fixed; }
-.page-title::before { position: absolute; content: ''; background: #1E2405; width: 100%; height: 100%; top: 0; left: 0; opacity: 0.9; mix-blend-mode: multiply; z-index: -9; }
+.page-title::before { position: absolute; content: ''; background: #5c5d58; width: 100%; height: 100%; top: 0; left: 0; opacity: 0.9; mix-blend-mode: multiply; z-index: -9; }
 .page-title h1 { font-size: 50px; color: var(--theme-white-color); line-height: 60px; font-weight: 500;  word-break: break-word; text-transform: capitalize;}
 .theme-breadcrumb-box{display: inline-block; }
 .page-breadcrumb { display: inline-block; margin-top: 15px; background: rgba(255, 255, 255, 0.1); padding: 7px 15px; border-radius: 8px; }
