--- a/css/base.css
+++ b/css/base.css
@@ -245,7 +245,7 @@ a, i, .btn, button, img, span, ul, li, a:before, .dropdown-menu, .feature-icon, 
 /* ------------------------
     Page Title
 ------------------------*/
-.page-title { display: block; position: relative; padding: 100px 0; background: var(--theme-bg-dark2-color); z-index: 9; background-attachment: fixed; }
+.page-title { display: block; position: relative; padding: 100px 0; height: 600px; }
 .page-title::before { position: absolute; content: ''; background: #1E2405; width: 100%; height: 100%; top: 0; left: 0; opacity: 0.9; mix-blend-mode: multiply; z-index: -9; }
 .page-title h1 { font-size: 50px; color: var(--theme-white-color); line-height: 60px; font-weight: 500;  word-break: break-word; text-transform: capitalize;}
 .theme-breadcrumb-box{display: inline-block; }
