--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,7 @@
     position: absolute;
     top: 100%;
     left: 10%;
+    margin-left: 35px;
     display: none;
     min-width: 10rem;
     list-style-type: none;
