"Update theme primary color from #FF6A00 to #EDB106"

--- a/css/theme-style.css
+++ b/css/theme-style.css
@@ -20,7 +20,7 @@
 ------------------------ */
 
   :root {
-  --theme-primary-color: #FF6A00;
+  --theme-primary-color: #EDB106;
   --theme-secondary-color: #EE0979;
   --theme-white-color: #ffffff;
   --theme-text-dark-color: #141416;
