--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
     position: absolute;
     top: 100%;
     left: 10%;
-    margin-left: 35px;
+    margin-left: 10px;
     display: none;
     min-width: 10rem;
     list-style-type: none;
@@ -97,6 +97,7 @@
   .tab-tabs {
     width: 20%;
     height: 100%;
+    margin-top: 20px;
     text-align: center;
     line-height: 60px;
     font-size: 18px;
