--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
     position: absolute;
     top: 100%;
     left: 10%;
-    margin-left: 10px;
+    /* margin-right: 30px; */
     display: none;
     min-width: 10rem;
     list-style-type: none;
@@ -98,6 +98,7 @@
     width: 20%;
     height: 100%;
     margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
     line-height: 60px;
     font-size: 18px;
@@ -274,6 +275,7 @@
       width: auto;
       line-height: 15px;
       font-weight: 600;
+      
     }
   
     .title-tabs {
@@ -309,5 +311,6 @@
       display: none;
       transform: none;
     }
+    
   }
   
