--- a/css/theme-style.css
+++ b/css/theme-style.css
@@ -20,8 +20,8 @@
 ------------------------ */
 
   :root {
-  --theme-primary-color: #EDB106;
-  --theme-secondary-color: #EE0979;
+  --theme-primary-color: #edb106;
+  --theme-secondary-color: #b20d0c;
   --theme-white-color: #ffffff;
   --theme-text-dark-color: #141416;
   --theme-body-color: #D0D0D0;
