--- a/css/articles.css
+++ b/css/articles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap');
 
+
+:root {
+    --theme-orange-color: #ef4f4f;
+}
+
 section.main-article-page.page-title {
     background-size: 100%;
     padding: 10rem 0;
@@ -14,6 +19,14 @@ section.main-article-page.page-title::before {
     background-image: url("../images/bg/article-banner.jpg");
     background-size: 120%;
     background-repeat: no-repeat;
+}
+
+.articlepage .gradientText {
+    color: #f35626;
+    font-weight: 600;
+    background-image: linear-gradient(135deg, var(--theme-primary-color), var(--theme-orange-color)); /* main theme-secondary is a bit dark and blends in with background, blog and article page alone have a custom secondary color (theme-orange-color) */
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 
