--- a/css/ARVRservice.css
+++ b/css/ARVRservice.css
@@ -308,7 +308,7 @@
 }
  
 .demopage-content{
-    margin-bottom: 10vh;
+   padding: 0;
 }
 .demopage-content .category {
     display: inline-block;
