--- a/css/offshore.css
+++ b/css/offshore.css
@@ -375,7 +375,7 @@
 }
 
 .team-model-section{
-  background-color: #14171a;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
