--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -62,7 +62,7 @@ Button
 a.primary-btn,
 .primary-btn {
   transition: all 0.6s;
-  background-image: linear-gradient(135deg, var(--theme-primary-color), var(--theme-secondary-color));
+  /* background-image: linear-gradient(135deg, var(--theme-primary-color), var(--theme-secondary-color)); */
   color: var(--theme-white-color);
 }
 
