--- a/css/contact.css
+++ b/css/contact.css
@@ -232,3 +232,10 @@ section {
     }
   }
   
+  .highlight
+  {
+    background: linear-gradient(45deg, #edb106, #b20d0c);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
