--- a/css/ARVRservice.css
+++ b/css/ARVRservice.css
@@ -734,6 +734,19 @@
       transform: translateX(0);
     }
   }
+
+  @media(max-width:500px){
+    .form-section-unique{
+      display: block;
+      padding: 5px;
+    }
+    .gradient-text-unique{
+      font-size: 2rem;
+    }
+    .text-side-unique{
+      padding: 10px;
+    }
+  }
   
   
   
