--- a/css/innomiant.css
+++ b/css/innomiant.css
@@ -594,7 +594,7 @@
 }
 
 
-..load-innomiant {
+.load-innomiant {
     color: white;
     background: linear-gradient(45deg, #edb106, #b20d0c);
     border-radius: 30px;
